--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,8 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  /*added width to unify hour box size*/
+  width: 50px;
 }
 
 .past {
